--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,6 @@
 {
     "python.pythonPath": "env\\Scripts\\python.exe",
-    "python.linting.enabled": true,
+    "python.linting.enabled": false,
+    "python.linting.pylintEnabled": true,
 
 }
