--- a/requirements.txt
+++ b/requirements.txt
@@ -1,15 +1,38 @@
 astroid==2.2.5
+bash==0.6
+bson==0.5.8
+certifi==2019.6.16
+chardet==3.0.4
+Click==7.0
 colorama==0.4.1
-entrypoints==0.3
-flake8==3.7.8
-isort==4.3.21
-lazy-object-proxy==1.4.2
+dj-database-url==0.5.0
+Django==1.11.23
+django-filter==2.2.0
+django-forms-bootstrap==3.1.0
+dnspython==1.16.0
+Flask==1.0.3
+Flask-PyMongo==2.3.0
+gunicorn==19.9.0
+heroku==0.1.4
+idna==2.8
+isort==4.3.18
+itsdangerous==1.1.0
+Jinja2==2.10.1
+lazy-object-proxy==1.3.1
+MarkupSafe==1.1.1
 mccabe==0.6.1
-pep8==1.7.1
-pycodestyle==2.5.0
-pyflakes==2.1.1
+Pillow==6.1.0
+psycopg2==2.8.3
 pylint==2.3.1
+pymongo==3.8.0
+python-dateutil==1.5
+pytz==2019.2
+requests==2.22.0
 six==1.12.0
-typed-ast==1.4.0
-wrapt==1.11.2
-django==1.11.23
+sqlparse==0.3.0
+stripe==2.36.1
+typed-ast==1.3.5
+urllib3==1.25.3
+Werkzeug==0.15.4
+whitenoise==4.1.3
+wrapt==1.11.1
