--- a/requirements.txt
+++ b/requirements.txt
@@ -10,6 +10,7 @@ Django==1.11.23
 django-filter==2.2.0
 django-forms-bootstrap==3.1.0
 dnspython==1.16.0
+env==0.1.0
 Flask==1.0.3
 Flask-PyMongo==2.3.0
 gunicorn==19.9.0
