--- a/travis.yml
+++ b/travis.yml
@@ -1,3 +1,6 @@
-language: python3
-python:
-    - "3.7"
+language: python
+python: 
+- "3.7"
+install: "pip3 install -r requirements.txt"
+script:
+- SECRET_KEY="whateveritmaybe" ./manage.py test
