--- a/requirements.txt
+++ b/requirements.txt
@@ -1,14 +1,29 @@
+asgiref==3.4.1
+astroid==2.2.5
 certifi==2021.10.8
 charset-normalizer==2.0.8
+colorama==0.4.1
 dj-database-url==0.5.0
 Django==1.11.23
 django-forms-bootstrap==3.1.0
 gunicorn==20.1.0
 idna==3.3
+isort==4.3.18
+lazy-object-proxy==1.3.1
+mccabe==0.6.1
 Pillow==8.4.0
+psycopg2==2.9.2
+pylint==2.3.1
+python-dateutil==2.8.2
 python-decouple==3.5
 pytz==2021.3
 requests==2.26.0
+six==1.12.0
+sqlparse==0.4.2
 stripe==2.63.0
+typed-ast==1.3.5
+typing_extensions==4.0.0
 urllib3==1.26.7
+virtualenv==16.7.5
 whitenoise==5.3.0
+wrapt==1.11.1
