--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,7 @@ colorama==0.4.1
 dj-database-url==0.5.0
 Django==1.11.23
 django-forms-bootstrap==3.1.0
+django-heroku==0.3.1
 gunicorn==20.1.0
 idna==3.3
 isort==4.3.18
